--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     padding: 0px;
     box-sizing: border-box;
 }
-body{
-   background-color: rgb(200, 199, 199);
 
+body{
+    background-color: white;
 }
 
 nav{
@@ -14,6 +14,8 @@ nav{
     justify-content: space-between;
     background-color: blue;
     padding: 5px 5%;
+    position: sticky;
+    top: 0px;
 }
 
 .logo{
@@ -69,4 +71,97 @@ padding: 0 15px;
 .search{
     width: 25px;
     margin-right: 10px;
+}
+
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+
+
+.left {
+  width: 25%;
+  flex-basis: 25%;
+padding-right: 15px;
+  margin-top: 20px;
+}
+
+
+.right {
+    width: 25%;
+    flex-basis: 25%;
+    margin-top: 20px;
+  }
+
+
+.mid {
+  width: 50%;
+  flex-basis: 50%;
+  height: 100vh;
+  background-color: rgb(99, 99, 255);
+  margin-top: 20px;
+  
+}
+
+/* Make it responsive */
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    flex-basis: 100%;
+  }
+}
+
+.imp-links a{
+
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    color: #626262;
+    width: fit-content;
+}
+
+.imp-links a:hover{
+    color: blue;
+}
+
+.imp-links a img{
+    width: 28px;
+    margin-right: 8px;
+}
+#last{
+    color: blue;
+}
+#last:hover{
+    color: black;
+}
+
+.imp-links{
+    border-bottom: 2px solid black;
+}
+
+.other{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    background-color: rgb(164, 220, 246);
+
+}
+.other ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.other ul li{
+    list-style: none;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-size: large;
 }
